tests/Project1/test/type_A_error1.out
Error type A at Line 3: unknown lexeme \xE2
Error type A at Line 3: unknown lexeme \x80
Error type A at Line 3: unknown lexeme \x8B
