tests/Project1/test/type_A_error1.spl
int main() {
    return 0;
}​
